tdf#100370 I put a control that return false when click with left mouse

I put a control that return false if you click with left mouse in the "if"(line 112)
before the function that paint the menu, so now with the left click you only change
the selection type without opens the menu.

Change-Id: I6e4acd6bcd8e09c5ad82ab82a4a26fc216ac099e